--- a/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/SearchableModules.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/SearchResults/App_LocalResources/SearchableModules.nl-NL.resx
@@ -40,6 +40,6 @@
     <value xml:space="preserve">pagina's</value>
   </data>
   <data name="Module_Group Directory.Text">
-    <value>Groep directorie</value>
+    <value>Groep map</value>
   </data>
 </root>
