--- a/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/PasswordReset.ascx.nl-NL.resx
@@ -4,7 +4,7 @@
     <value>Antwoord</value>
   </data>
   <data name="ChangeSuccessful.Text" xml:space="preserve" lastModified="2015-09-17 04:19:24">
-    <value>Wachtwoord succesvol gewijzigt.</value>
+    <value>Wachtwoord succesvol gewijzigd.</value>
   </data>
   <data name="cmdChangePassword.Text" xml:space="preserve">
     <value>Wijzig wachtwoord</value>
@@ -25,16 +25,16 @@
     <value>Vul uw emailadres in</value>
   </data>
   <data name="Email.Required" xml:space="preserve">
-    <value>U dient een emailadres in te voeren</value>
+    <value>U dient een e-mailadres in te voeren</value>
   </data>
   <data name="Email.Text" xml:space="preserve" lastModified="2015-09-17 08:20:40">
-    <value>Emailadres</value>
+    <value>E-mailadres</value>
   </data>
   <data name="FailedAttempt.Text" xml:space="preserve">
     <value>Het herstellen van het wachtwoord is mislukt - de gebruikersnaam/token combinatie is ongeldig, of het token is verlopen.</value>
   </data>
   <data name="ForcedResetInfo.Text" xml:space="preserve" lastModified="2015-12-30 08:22:49">
-    <value>Het wachtwoord moet worden veranderd voor je kunt inloggen met je account. Er is een wachtwoord reset link naar je emailadres toegestuurd waarmee je een nieuw wachtwoord kunt aanmaken.</value>
+    <value>Het wachtwoord moet worden veranderd voor je kunt inloggen met je account. Er is een wachtwoord reset link naar uw e-mailadres toegestuurd waarmee je een nieuw wachtwoord kunt aanmaken.</value>
   </data>
   <data name="Password.Help" xml:space="preserve">
     <value>Vul u wachtwoord in</value>
@@ -46,7 +46,7 @@
     <value>Nieuw wachtwoord</value>
   </data>
   <data name="SuccesfulAttempt.Text" xml:space="preserve">
-    <value>Het gebruikersaccount heeft zijn wachtwoord gewijzigd. </value>
+    <value>Het wachtwoord voor dit gebruikersaccount is gewijzigd. </value>
   </data>
   <data name="Username.Help" xml:space="preserve">
     <value>Voer de gebruikersnaam in waarmee de token wordt geassocieerd.
