--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Licensing/App_LocalResources/licensing.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Licensing/App_LocalResources/licensing.nl-NL.resx
@@ -21,12 +21,6 @@
   <data name="CheckOutEvoq.Header" xml:space="preserve" lastModified="2016-11-30 07:18:33">
     <value>Bekijk EVOQ</value>
   </data>
-  <data name="DocumentCenter" xml:space="preserve" lastModified="2016-11-30 07:18:33">
-    <value>Ongeacht uw vragen, DNN's nieuwe" Doc Center" is de plaats om naar toe te gaan voor antwoorden, tutorials en product assistentie.</value>
-  </data>
-  <data name="DocumentCenter.Header" xml:space="preserve" lastModified="2016-11-30 07:18:33">
-    <value>DOCUMENTATIE CENTER</value>
-  </data>
   <data name="Error.ACT1.Text" xml:space="preserve" lastModified="2016-11-30 07:18:33">
     <value>Licensie Activatie mislukt. De ingevoerde licensie details matchen niet met een geldige licensie. &lt;br /&gt;&lt;br /&gt; Controleer uw licensie details op  &lt;a href="{0}" target="_blank"&gt; uw licensie pagina op dnnsoftware.com&lt;/a&gt; en probeer opnieuw. Als u problemen blijft houden, contacteer Technisch Support.</value>
   </data>
@@ -146,5 +140,29 @@
   </data>
   <data name="WebServer.Header" xml:space="preserve" lastModified="2016-11-30 16:53:48">
     <value>WEB SERVER</value>
+  </data>
+  <data name="Community">
+    <value>The DNN Community is active and vibrant. Visit us and join in on the activities. Get help, discuss projects, and keep up with all the great things others are doing.</value>
+  </data>
+  <data name="Community.Header">
+    <value>DE COMMUNITY</value>
+  </data>
+  <data name="Docs">
+    <value>Ongeacht uw vragen, DNN's nieuwe" Doc Center" is de plaats om naar toe te gaan voor antwoorden, tutorials en product assistentie.</value>
+  </data>
+  <data name="Docs.Header">
+    <value>DOCUMENTATIE CENTER</value>
+  </data>
+  <data name="GitHub">
+    <value>The open source DNN Platform project is managed on GitHub. Visit us there and get involved. Report issues, provide valuable feedback, and contribute.</value>
+  </data>
+  <data name="GitHub.Header">
+    <value>THE CODE</value>
+  </data>
+  <data name="Intro">
+    <value>DNN® ( formerly DotNetNuke® ) is the leading open source web content management platform (CMS) in the Microsoft ecosystem. The product is used to build professional looking and easy-to-use commercial websites, social intranets, community portals, or partner extranets. Containing dynamic content of all types, DNN sites are easy to deploy and update. The DNN Platform has been downloaded more than 8 million times and powers more than 750,000 websites globally. A community of more than 1 million members forms a powerful support network.</value>
+  </data>
+  <data name="Intro.Header">
+    <value>DNN Platform</value>
   </data>
 </root>
