--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Seo/App_LocalResources/seo.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.Seo/App_LocalResources/seo.nl-NL.resx
@@ -37,10 +37,10 @@
     <value xml:space="preserve">Alias in URL</value>
   </data>
   <data name="autoAsciiConvertLabel.Help" lastModified="2016-12-01 04:21:43">
-    <value xml:space="preserve">Wanneer gecontroleerd, karakters met een accent (diacritic) zoals å enè zullen worden geconverteerd naar hun plain-ascii equivalent.  Voorbeeld : å -&amp;gt; a en è -&amp;gt; e.</value>
+    <value xml:space="preserve">Indien aangevinkt zullen karakters met een accent (diakritische tekens) zoals å en è worden geconverteerd naar hun plain-ascii equivalent.  Voorbeeld : å -&gt; a en è -&gt; e.</value>
   </data>
   <data name="autoAsciiConvertLabel.Text" lastModified="2016-12-01 05:25:48">
-    <value xml:space="preserve">Converteren karakters met accenten</value>
+    <value xml:space="preserve">Converteer karakters met accenten</value>
   </data>
   <data name="Built_In_Url.Text" lastModified="2016-12-01 05:25:48">
     <value xml:space="preserve">Ingebouwde URL</value>
@@ -55,7 +55,7 @@
     <value xml:space="preserve">Verwijderde pagina</value>
   </data>
   <data name="Diacritic_Characters.Text" lastModified="2016-12-01 05:25:48">
-    <value xml:space="preserve">Diacritic karakters</value>
+    <value xml:space="preserve">Diakritische tekens</value>
   </data>
   <data name="DisableCaching.Text" lastModified="2016-12-01 05:25:48">
     <value xml:space="preserve">Uitschakelen caching</value>
@@ -64,7 +64,7 @@
     <value xml:space="preserve">Uitgeschakelde pagina</value>
   </data>
   <data name="Do301RedirectToPortalHome.Text" lastModified="2018-07-24 15:04:13">
-    <value xml:space="preserve">site Homepagina</value>
+    <value xml:space="preserve">Site Homepagina</value>
   </data>
   <data name="Do404Error.Text" lastModified="2016-12-01 05:25:48">
     <value xml:space="preserve">404 fout</value>
@@ -94,7 +94,7 @@
     <value xml:space="preserve">De Herschrijf niet URL Reguliere Uitdrukking  stopt URL herschrijven van voorkomen op alle matchende URL's. Gebruik deze waarde wanneer een URL geinterpreteerd wordt als een DotNetNuke pagina, maar niet zou moeten zijn.</value>
   </data>
   <data name="doNotRewriteRegExLabel.Text" lastModified="2016-12-01 07:31:24">
-    <value xml:space="preserve">Herschrijf niet URL Reguliere Uitdrukking </value>
+    <value xml:space="preserve">Niet herschrijven van URL Reguliere Uitdrukking </value>
   </data>
   <data name="doNotUseFriendlyUrlsRegExInvalidPattern.Text" lastModified="2016-12-01 08:34:12">
     <value xml:space="preserve">Gebruik geen vriendelijke URL's Reguliere Uitdrukking is ongeldig</value>
@@ -109,7 +109,7 @@
     <value xml:space="preserve">Vink dit vakje aan als je oude "niet-vriendelijke" URL's wilt laten herleiden naar de nieuwe URL's.</value>
   </data>
   <data name="enable301RedirectsLabel.Text" lastModified="2016-12-01 09:38:17">
-    <value xml:space="preserve">Herleiden naar Vriendelijke URL's</value>
+    <value xml:space="preserve">Doorsturen naar Vriendelijke URL's</value>
   </data>
   <data name="Enabled.Header" lastModified="2016-12-01 09:38:17">
     <value xml:space="preserve">Ingeschakeld</value>
@@ -121,13 +121,13 @@
     <value xml:space="preserve">Converteer URL's naar lowercase</value>
   </data>
   <data name="enableSitemapProvider.Help" lastModified="2016-12-01 09:38:17">
-    <value xml:space="preserve">Inschakelen Sitemap Provider</value>
+    <value xml:space="preserve">Sitemap Provider inschakelen</value>
   </data>
   <data name="enableSitemapProvider.Text" lastModified="2016-12-01 09:38:17">
-    <value xml:space="preserve">Inschakelen Sitemap Provider</value>
+    <value xml:space="preserve">Sitemap Provider inschakelen</value>
   </data>
   <data name="enableSystemGeneratedUrlsLabel.Help" lastModified="2016-12-01 09:38:17">
-    <value xml:space="preserve">U kunt configureren goe het systeem URL's zal genereren.</value>
+    <value xml:space="preserve">U kunt hier configureren hoe het systeem URL's zal genereren.</value>
   </data>
   <data name="enableSystemGeneratedUrlsLabel.Text" lastModified="2016-12-01 09:38:17">
     <value xml:space="preserve">Aaneenschakelen Pagina URL's</value>
