--- a/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.TaskScheduler/App_LocalResources/taskscheduler.nl-NL.resx
+++ b/Resources/DesktopModules/Admin/Dnn.PersonaBar/Modules/Dnn.TaskScheduler/App_LocalResources/taskscheduler.nl-NL.resx
@@ -25,13 +25,13 @@
     <value xml:space="preserve">Annuleren</value>
   </data>
   <data name="cmdAddTask.Text" lastModified="2016-12-01 03:37:13">
-    <value xml:space="preserve">Toevoegen taak</value>
+    <value xml:space="preserve">Taak toevoegen</value>
   </data>
   <data name="cmdDelete.Text" lastModified="2016-12-01 03:37:13">
     <value xml:space="preserve">Verwijderen</value>
   </data>
   <data name="cmdRun.Text" lastModified="2016-12-01 03:37:13">
-    <value xml:space="preserve">Voer nu uit</value>
+    <value xml:space="preserve">Nu uitvoeren</value>
   </data>
   <data name="cmdSave.Text" lastModified="2016-12-01 03:37:13">
     <value xml:space="preserve">Opslaan</value>
@@ -133,10 +133,10 @@
     <value xml:space="preserve">Opdracht:</value>
   </data>
   <data name="lblFreeThreadsLabel.Text" lastModified="2016-12-01 04:45:08">
-    <value xml:space="preserve">Gratis Threads:</value>
+    <value xml:space="preserve">Vrije Threads:</value>
   </data>
   <data name="lblMaxThreadsLabel.Text" lastModified="2016-12-01 04:45:08">
-    <value xml:space="preserve">Maximaal aantal threads:</value>
+    <value xml:space="preserve">Maximum aantal threads:</value>
   </data>
   <data name="lblProcessing.Text" lastModified="2016-12-01 05:48:20">
     <value xml:space="preserve">Items die verwerkt worden</value>
@@ -145,7 +145,7 @@
     <value xml:space="preserve">Items in de rij</value>
   </data>
   <data name="lblStartDelay.Text" lastModified="2016-12-01 04:45:08">
-    <value xml:space="preserve">Planning Start Vertraging (mins):</value>
+    <value xml:space="preserve">Planning Start vertraging (min.):</value>
   </data>
   <data name="lblStatusLabel.Text" lastModified="2016-12-01 04:45:08">
     <value xml:space="preserve">Status:</value>
@@ -172,7 +172,7 @@
     <value xml:space="preserve">minuut</value>
   </data>
   <data name="ModuleHelp.Text" lastModified="2016-12-01 05:48:20">
-    <value xml:space="preserve">&amp;amp;lt;h1&amp;amp;gt;Over Planning&amp;amp;lt;/h1&amp;amp;gt;&amp;amp;lt;p&amp;amp;gt;Staat u toe om te plannen om taken uit te voeren met specifieke intervallen.&amp;amp;lt;/p&amp;amp;gt;</value>
+    <value xml:space="preserve">&lt;h1&gt;Over Planning&lt;/h1&gt;&lt;p&gt;Staat u toe om te plannen om taken uit te voeren met specifieke intervallen.&lt;/p&gt;</value>
   </data>
   <data name="Months.Text" lastModified="2016-12-01 05:48:20">
     <value xml:space="preserve">Maanden</value>
@@ -181,7 +181,7 @@
     <value xml:space="preserve">niet van toepassing</value>
   </data>
   <data name="Name.Header" lastModified="2016-12-01 05:48:20">
-    <value xml:space="preserve">Taak Naam</value>
+    <value xml:space="preserve">Taaknaam</value>
   </data>
   <data name="nav_TaskScheduler.Text" lastModified="2016-12-01 05:48:20">
     <value xml:space="preserve">Planner</value>
@@ -202,7 +202,7 @@
     <value xml:space="preserve">Niet ingesteld</value>
   </data>
   <data name="NoTasks.Text" lastModified="2016-12-01 05:48:20">
-    <value xml:space="preserve">Er zijn geen taken in de rij en er zijn geen taken die verwerkt worden.</value>
+    <value xml:space="preserve">Er staan geen taken in de wachtrij en er zijn geen taken die verwerkt worden.</value>
   </data>
   <data name="NoTasksMessage.Text" lastModified="2018-07-24 16:25:44">
     <value xml:space="preserve">Wanneer u taken in de wachtrij of verwerking hebt staan, verschijnen ze hier.</value>
@@ -214,31 +214,31 @@
     <value xml:space="preserve">Object afhankelijkheden:</value>
   </data>
   <data name="Overdue.Header" lastModified="2016-12-01 06:49:54">
-    <value xml:space="preserve">Over tijd (seconden):</value>
+    <value xml:space="preserve">Te laat (seconden):</value>
   </data>
   <data name="pagerSummary.Text" lastModified="2016-12-01 06:49:54">
-    <value xml:space="preserve">Tonend {0}-{1} van {2} resultaten</value>
+    <value xml:space="preserve">Toont {0} - {1} van {2} resultaten</value>
   </data>
   <data name="pageSizeOption.Text" lastModified="2016-12-01 06:49:54">
     <value xml:space="preserve">{0} resultaten per pagina</value>
   </data>
   <data name="plAttachToEvent.Help" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Selecteer "Applicatie Start" om dit evenement uit te voeren als de web app start. Noot: evenementen die draaien op APPLICATION_END kunnen mogelijkerwijs niet betrouwbaar draaien op sommige hosts.</value>
+    <value xml:space="preserve">Selecteer "Applicatie Start" om dit item uit te voeren als de web app start. Let op: items die draaien op APPLICATION_END kunnen mogelijkerwijs niet betrouwbaar draaien op sommige hosts.</value>
   </data>
   <data name="plAttachToEvent.Text" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Uitvoeren op Evenement</value>
+    <value xml:space="preserve">Uitvoeren bij gebeurtenis</value>
   </data>
   <data name="plCatchUpEnabled.Help" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Vink dit vakje aan om dit evenement uit te voeren bij elke frequentie die gemist wordt tijdens elke server uitval.</value>
+    <value xml:space="preserve">Vink dit vakje aan om dit item uit te voeren bij elke frequentie die gemist wordt tijdens elke server uitval.</value>
   </data>
   <data name="plCatchUpEnabled.Text" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Inhaal taken</value>
+    <value xml:space="preserve">Gemiste taken inhalen</value>
   </data>
   <data name="plEnabled.Help" lastModified="2016-12-01 08:30:12">
     <value xml:space="preserve">Vink dit vakje aan om de planning voor deze taak in te schakelen. </value>
   </data>
   <data name="plEnabled.Text" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Inschakelen Planning</value>
+    <value xml:space="preserve">Actief</value>
   </data>
   <data name="plFriendlyName.Help" lastModified="2016-12-01 08:30:12">
     <value xml:space="preserve">Vul een naam in voor de geplande taak.</value>
@@ -247,7 +247,7 @@
     <value xml:space="preserve">Vriendelijke naam</value>
   </data>
   <data name="plObjectDependencies.Help" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Vul de tabellen of andere objecten in waar dit evenement van afhangt. (Eg. Gebruikers, GebruikersOnline"</value>
+    <value xml:space="preserve">Vul de tabellen of andere objecten in waar dit item van afhangt. (Eg. Gebruikers, GebruikersOnline"</value>
   </data>
   <data name="plObjectDependencies.Text" lastModified="2016-12-01 08:30:12">
     <value xml:space="preserve">Òbject afhankelijkheden</value>
@@ -256,37 +256,37 @@
     <value xml:space="preserve">Selecteer het aantal items om te behouden in de planning geschiedenis.</value>
   </data>
   <data name="plRetainHistoryNum.Text" lastModified="2016-12-01 08:30:12">
-    <value xml:space="preserve">Behoud Planning Geschiedenis</value>
+    <value xml:space="preserve">Behoud planning geschiedenis items</value>
   </data>
   <data name="plRetryTimeLapse.Help" lastModified="2016-12-01 09:44:09">
     <value xml:space="preserve">Stel de tijd periode in om de taak opnieuw uit te voeren na een mislukking.</value>
   </data>
   <data name="plRetryTimeLapse.Text" lastModified="2016-12-01 09:44:09">
-    <value xml:space="preserve">Opnieuw proberen Tijd Verloop</value>
+    <value xml:space="preserve">Opnieuw proberen na</value>
   </data>
   <data name="plScheduleAppStartDelay.Help" lastModified="2016-12-01 09:44:09">
     <value xml:space="preserve">Aantal minuten dat het systeem zou moeten wachten voordat het ingeplande taken uitvoert na een herstart. Standaard is 1 min.</value>
   </data>
   <data name="plScheduleAppStartDelay.Text" lastModified="2016-12-01 09:44:09">
-    <value xml:space="preserve">Planning Vertraging:</value>
+    <value xml:space="preserve">Planning vertraging:</value>
   </data>
   <data name="plSchedulerMode.Help" lastModified="2016-12-01 09:44:09">
     <value xml:space="preserve">De Timer Methode onderhoudt een aparte thread om geplande taken uit te voeren terwijl dat het werkproces actief is.  Alternatief, de Aanvraag Methode voert taken uit wanneer HTTP Verzoeken worden gemaakt. U kunt ook de planner uitschakelen door Uitschakelen te selecteren.</value>
   </data>
   <data name="plSchedulerMode.Text" lastModified="2016-12-01 09:44:09">
-    <value xml:space="preserve">Planner Modus:</value>
+    <value xml:space="preserve">Planner methode:</value>
   </data>
   <data name="plScheduleStartDate.Help" lastModified="2016-12-01 09:44:09">
     <value xml:space="preserve">Vul de startdatum/tijd in voor de geplande taak. Noot: als de server down is op de geplande tijd of andere taken draaien al, dan zal de taak worden uitgevoerd zodra de server weer online komt. </value>
   </data>
   <data name="plScheduleStartDate.Text" lastModified="2016-12-01 09:44:09">
-    <value xml:space="preserve">Planning Start Datum/Tijd</value>
+    <value xml:space="preserve">Planning startdatum en tijd</value>
   </data>
   <data name="plServers.Help" lastModified="2016-12-01 09:44:09">
     <value xml:space="preserve">Filter geplande taken door een enkele server of kies Alle om alle taken te bekijken.</value>
   </data>
   <data name="plServers.Text" lastModified="2016-12-01 09:44:09">
-    <value xml:space="preserve">Server Naam:</value>
+    <value xml:space="preserve">Servernaam:</value>
   </data>
   <data name="plTimeLapse.Help" lastModified="2016-12-01 11:09:26">
     <value xml:space="preserve">Stel de tijd periode in om te bepalen hoe frequent deze taak moet worden uitgevoerd.</value>
@@ -298,10 +298,10 @@
     <value xml:space="preserve">Dit is de volledige klas naam gevolgd door de verzamelingsnaam. Eg. "DotNetNuke.Entities.Users.PurgeUsersOnline,DOTNETNUKE"</value>
   </data>
   <data name="plType.Text" lastModified="2016-12-01 11:09:26">
-    <value xml:space="preserve">Volledige klas Naam en Verzameling</value>
+    <value xml:space="preserve">Volledige Classname en Assembly</value>
   </data>
   <data name="processing.Text" lastModified="2016-12-01 11:09:26">
-    <value xml:space="preserve">Verwerkend...</value>
+    <value xml:space="preserve">Bezig...</value>
   </data>
   <data name="Prompt_FetchTaskFailed.Text" lastModified="2018-07-24 16:25:44">
     <value xml:space="preserve">Fout bij ophalen van de taakdetails. Gelieve het logboek te raadplegen voor meer details.</value>
@@ -690,25 +690,25 @@
     <value xml:space="preserve">Taak bijwerken mislukt.</value>
   </data>
   <data name="RanOnServerColumn.Text" lastModified="2016-12-01 11:09:26">
-    <value xml:space="preserve">DRAAIEND OP SERVER</value>
+    <value xml:space="preserve">SERVER</value>
   </data>
   <data name="RequestMethod.Text" lastModified="2016-12-01 11:09:26">
     <value xml:space="preserve">Verzoek methode</value>
   </data>
   <data name="RetryTimeLapse.Header" lastModified="2016-12-01 11:09:26">
-    <value xml:space="preserve">PROBEER TIJD VERLOOP OPNIEUW</value>
+    <value xml:space="preserve">OPNIEUW PROBEREN</value>
   </data>
   <data name="RetryTimeLapseValidator.ErrorMessage" lastModified="2016-12-01 11:09:26">
     <value xml:space="preserve">Probeer opnieuw frequency bereik tussen 1 en 999999.</value>
   </data>
   <data name="RUNNING_EVENT_SCHEDULE.Text" lastModified="2016-12-01 11:09:26">
-    <value xml:space="preserve">UITVOEREN EVENEMENT PLANNING</value>
+    <value xml:space="preserve">UITVOEREN GEBEURTENIS PLANNING</value>
   </data>
   <data name="RUNNING_REQUEST_SCHEDULE.Text" lastModified="2016-12-01 11:09:26">
     <value xml:space="preserve">UITVOEREN VERZOEK PLANNING</value>
   </data>
   <data name="RUNNING_TIMER_SCHEDULE.Text" lastModified="2016-12-01 11:09:26">
-    <value xml:space="preserve">UITVOEREN TIMER PLANNER</value>
+    <value xml:space="preserve">UITVOEREN TIMER PLANNING</value>
   </data>
   <data name="RunNow.Text" lastModified="2016-12-01 12:16:54">
     <value xml:space="preserve">Item toegevoegd aan planning voor directe uitvoering.</value>
@@ -786,7 +786,7 @@
     <value xml:space="preserve">Start/Einde/Volgende</value>
   </data>
   <data name="Start/End/Next Start.Header" lastModified="2016-12-01 14:24:06">
-    <value xml:space="preserve">Start/Einde/Volgende Start</value>
+    <value xml:space="preserve">Start/Einde/Volgende start</value>
   </data>
   <data name="Started.Header" lastModified="2016-12-01 14:24:06">
     <value xml:space="preserve">Gestart</value>
@@ -795,7 +795,7 @@
     <value xml:space="preserve">START/EINDE</value>
   </data>
   <data name="StartSchedule.Text" lastModified="2016-12-01 14:24:06">
-    <value xml:space="preserve">Start planning</value>
+    <value xml:space="preserve">Start planner</value>
   </data>
   <data name="Status.Text" lastModified="2016-12-01 14:24:06">
     <value xml:space="preserve">Bekijk status</value>
@@ -807,7 +807,7 @@
     <value xml:space="preserve">GESTOPT</value>
   </data>
   <data name="StopSchedule.Text" lastModified="2016-12-01 14:24:06">
-    <value xml:space="preserve">Stop Planning</value>
+    <value xml:space="preserve">Stop planner</value>
   </data>
   <data name="Succeeded.Header" lastModified="2016-12-01 14:24:06">
     <value xml:space="preserve">Geslaagd</value>
@@ -855,7 +855,7 @@
     <value xml:space="preserve">Het type planning item is vereist.</value>
   </data>
   <data name="Update.Text" lastModified="2016-12-01 15:27:39">
-    <value xml:space="preserve">Updaten</value>
+    <value xml:space="preserve">Bijwerken</value>
   </data>
   <data name="UpdateSuccess.Text" lastModified="2016-12-01 15:27:39">
     <value xml:space="preserve">Uw wijzigingen zijn opgeslagen.</value>
@@ -877,5 +877,14 @@
   </data>
   <data name="Yes.Text" lastModified="2016-12-01 15:27:39">
     <value xml:space="preserve">Ja</value>
+  </data>
+  <data name="Prompt_ScheduleFlagRequired.Text">
+    <value>You must specify the scheduled item's ID using the --{0} flag or by passing the number as the first argument.\n</value>
+  </data>
+  <data name="Prompt_SchedulerCategory.Text">
+    <value>Planner commando's</value>
+  </data>
+  <data name="Prompt_TaskFound.Text">
+    <value>Taak {0} is gevonden.</value>
   </data>
 </root>
