--- a/Resources/Install/App_LocalResources/UpgradeWizard.aspx.nl-NL.resx
+++ b/Resources/Install/App_LocalResources/UpgradeWizard.aspx.nl-NL.resx
@@ -13,13 +13,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AcceptTerms.Required" lastModified="2018-07-24 07:39:16">
-    <value xml:space="preserve">Accepteer de voorwaardes van de licentie om door te gaan.</value>
+    <value xml:space="preserve">Accepteer de gebruikersvoorwaarden om door te gaan.</value>
   </data>
   <data name="AcceptTerms.Text" lastModified="2018-07-24 07:39:16">
-    <value xml:space="preserve">Ik accepteer de voorwaardes van de &lt;a href="../Licenses/Dnn_Corp_License.pdf" target="_blank"&gt;licentie&lt;/a&gt;</value>
+    <value xml:space="preserve">Ik accepteer de &lt;a href="../Licenses/Dnn_Corp_License.pdf" target="_blank"&gt;gebruikersvoorwaarden&lt;/a&gt;</value>
   </data>
   <data name="AccountInfo.Text">
-    <value xml:space="preserve">Account Informatie</value>
+    <value xml:space="preserve">Account informatie</value>
   </data>
   <data name="BestPractices.Text">
     <value xml:space="preserve">U staat op het punt om uw website te upgraden naar een recentere versie van de applicatie. Het toepassen van upgrades op een consistente basis is de beste manier om ervoor te zorgen dat u de integriteit van uw investering en de veiligheid van uw gebruikers en bezittingen te garanderen. Voordat u verder gaat met de geautomatiseerde upgrade-proces moet u ervoor zorgen dat: &lt;ul&gt; &lt;li&gt; je hebt plannen gemaakt om dit proces eerste poging in een staging-omgeving &lt;li&gt; u uw huidige installatie kenmerken gedocumenteerd in onder meer het doen van onderzoek over de verenigbaarheid van een derde partij modules die u gebruikt &lt;li&gt; die u hebt gemaakt van de nodige back-ups van uw omgeving, zodat u in staat zal zijn om uw website te herstellen in het geval van een onverwachte upgrade mislukking. &lt;/ Ul&gt;</value>
