--- a/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
+++ b/Resources/admin/Security/App_LocalResources/SendPassword.ascx.nl-NL.resx
@@ -28,25 +28,25 @@
     <value xml:space="preserve">Het opvragen van wachtwoorden is niet ingeschakeld op deze site.</value>
   </data>
   <data name="EmailNotFound.Text">
-    <value xml:space="preserve">We konden geen account vinden met dit emailadres. Probeer het opnieuw.</value>
+    <value xml:space="preserve">We konden geen account vinden met dit e-mailadres. Probeer het opnieuw.</value>
   </data>
   <data name="EnterCode.Text">
-    <value xml:space="preserve">Geef uw verificatiecode</value>
+    <value xml:space="preserve">Vul uw verificatiecode in</value>
   </data>
   <data name="EnterUsername.Text">
-    <value xml:space="preserve">Geef uw gebruikersnaam</value>
+    <value xml:space="preserve">Vul uw gebruikersnaam in</value>
   </data>
   <data name="EnterUsernameEmail.Text">
-    <value xml:space="preserve">Geef de gebruikersnaam of E-mail adres dat u gebruikt heeft tijdens registratie bij deze site.</value>
+    <value xml:space="preserve">Vul uw gebruikersnaam of uw e-mailadres in dat u gebruikt heeft tijdens registratie bij deze site.</value>
   </data>
   <data name="hlLogin.Text">
     <value xml:space="preserve">Annuleren</value>
   </data>
   <data name="InvalidCaptcha.Text">
-    <value xml:space="preserve">Onjuiste Beveligingscode</value>
+    <value xml:space="preserve">Onjuiste beveligingscode</value>
   </data>
   <data name="LoginFailed.Text">
-    <value xml:space="preserve">Mislukte Login. let op: wachtwoorden zijn hoofdletter gevoelig.</value>
+    <value xml:space="preserve">Inloggen mislukt. Let op: wachtwoorden zijn hoofdletter gevoelig.</value>
   </data>
   <data name="MultipleUsers.Text">
     <value xml:space="preserve">Er zijn meerdere gebruikers met het zelfde e-mailadres gevonden. Geef uw gebruikersnaam in en probeer het opnieuw.</value>
@@ -61,7 +61,7 @@
     <value xml:space="preserve">Als de ingevoerd gegevens correct waren, ontvangt u een e-mail met een link om het wachtwoord te resetten.</value>
   </data>
   <data name="plAnswer.Help">
-    <value xml:space="preserve">Geef het antwoord op uw Wachtwoord Vraag</value>
+    <value xml:space="preserve">Geef het antwoord op uw Wachtwoord vraag</value>
   </data>
   <data name="plAnswer.Text">
     <value xml:space="preserve">Antwoord</value>
@@ -82,7 +82,7 @@
     <value xml:space="preserve">De door u opgegeven wachtwoord vraag</value>
   </data>
   <data name="plQuestion.Text">
-    <value xml:space="preserve">Wachtwoord Vraag:</value>
+    <value xml:space="preserve">Wachtwoord vraag:</value>
   </data>
   <data name="plUsername.Help">
     <value xml:space="preserve">Voer hier uw gebruikersnaam in. In veel gevallen zal dit uw e-mailadres zijn.</value>
@@ -91,10 +91,10 @@
     <value xml:space="preserve">Gebruikersnaam:</value>
   </data>
   <data name="RequiresQuestionAndAnswer.Text">
-    <value xml:space="preserve"> U dient antwoord te geven op de vraag die u tijdens de registratie heeft opgegeven.</value>
+    <value xml:space="preserve">U dient antwoord te geven op de vraag die u tijdens de registratie heeft opgegeven.</value>
   </data>
   <data name="RequiresUniqueEmail.Text">
-    <value xml:space="preserve">&lt;br/&gt;&lt;br/&gt; U kunt de email opvragen door uw emailadres of gebruikersnaam in te vullen.</value>
+    <value xml:space="preserve">&lt;br/&gt;&lt;br/&gt; U kunt de e-mail opvragen door uw e-mailadres of gebruikersnaam in te vullen.</value>
   </data>
   <data name="ResetPassword.Text">
     <value xml:space="preserve">Reset Wachtwoord</value>
